# braid-opto-arena

./: .gitignore  .gitmodules  .pre-commit-config.yaml  BaslerCam.py  BraidProxy.py  BraidTrigger.py  CSVWriter.py  CamerasManager.py  FlydraProxy.py  OptoTrigger.py  PositionTrigger.py  PyCamera.py  README.md  ReusableBarrier.py  ThreadClass.py  VisualStimuli.py  basler_camera.py  cargo.toml  config.yaml  csv_writer.py  dpt_distance_calibration.csv  environment.yml  flydra_env.yaml  flydra_proxy.py  helper_functions.py  highspeed_cameras.py  lens_controller.csv  main.py  mkdocs.yml  opto_trigger.py  params.toml  position_trigger.py  power_calibration.csv  pyproject.toml  stimuli.py  tracking_power_data_20250131_134152.csv  utils.py  visual_stimuli.py
BraidTrigger/: CSVWriter.py  CamerasManager.py  FlydraProxy.py  OptoTrigger.py  PositionTrigger.py  ThreadClass.py  VisualStimuli.py  __init__.py
BraidTrigger/cameras/: BaslerCam.py  __init__.py
BraidTrigger/stimuli/: __init__.py  stimuli.py
arduino/CameraTrigger/: CameraTrigger.ino
arduino/CameraTrigger.ino/: CameraTrigger.ino.ino
arduino/OptoTrigger/: OptoTrigger.ino
braid_retransmit/: Cargo.toml
braid_retransmit/src/: main.rs
data/: params.toml
docs/: calibration.md
docs/source/: conf.py  index.rst  modules.rst  src.devices.rst  src.rst  src.stimuli.rst
documentation/: .gitignore  README.md  book.toml
documentation/src/: 0_camera_setup_and_calibration.md  1_multi_camera_calibration.md  2_arena_alignment.md  SUMMARY.md  arena_alignment.md  braid_and_opto-trigger_guide.md  camera_setup_and_calibration.md  multi_camera_calibration.md
modules/: calibration_matrix.npz  lens_controller.py  liquid_lens.py  messages.py  plotting.py  stimuli.py  utils.py  visual_stimuli.py
modules/analysis/: classes.py
modules/cameras/: basler_camera.py  ximea_camera.py
modules/stimuli/: GratingStim.py  visual_stimuli.py
modules/utils/: config_utils.py  csv_writer.py  file_utils.py  files.py  flydra_proxy.py  folder_utils.py  hardware.py  hardware_utils.py  liquid_lens.py  log_config.py  opto.py  opto_utils.py  video_utils.py
notebooks/: braidz-writer.py  display_looming_stimuli.py  find_best_focus.ipynb  get_mean_z.ipynb  lens_calibration.ipynb  power_calibration.ipynb  read_braidz.ipynb  screen_to_braid_calibration.ipynb  screen_to_ximea_calibration.py
rust/braid_retransmit/: Cargo.toml
rust/ximea_camera/: Cargo.toml
scripts/: 0.0_calibration_matrix.csv  analyise_power_measurement.ipynb  braid_retransmit_udp.py  capture_focus_images.py  dynamic_stimuli_test.py  effective_resolution.py  extract_braidz.py  find_best_focus.ipynb  find_best_focus_point.py  find_optimal_focus_for_liquid_lens.py  fly_simulator.py  grab_synchronized_video.py  light_power_measurement.py  list_pyvisa_devices.py  optolens.py  power_calibration.py  stimuli_calibration.py  stimuli_position_interpolation.ipynb  tiff2vid.py  ximea_camera_example.py
scripts/xiapi_rust/: Cargo.toml
scripts/xiapi_rust/src/: main.rs
scripts/xiapi_rust_opencv/: Cargo.toml
scripts/xiapi_rust_opencv/src/: main.rs
scripts/ximea_tests/: ximea_camera_example.py  ximea_camera_example_using_queue.py
src/: __init__.py  angular_velocity_plotter.py  async_braid_proxy.py  braid_proxy.py  config_manager.py  csv_writer.py  fly_heading_tracker.py  lens_controller.py  messages.py  process_manager.py  trigger_handler.py  visual_stimuli.py
src/core/: __init__.py  braid_proxy.py  csv_writer.py  messages.py
src/devices/: __init__.py  hardware.py  lens_calibration.py  lens_controller.py  lens_driver.py  opto.py  opto_trigger.py  power_supply.py
src/handlers/: __init__.py  trigger.py
src/process/: __init__.py  base.py  camera.py  configs.py  display.py  group.py  lens.py
src/utils/: files.py  (+5 more)
static/: params.toml
stimuli/: GratingStim.py  LoomingStim.py  StaticStim.py  __init__.py
test/: params.toml
utils/: grab_synchronized_video.py  rspowersupply.py  stimuli.py  stimuli_calibration.py  ximea_camera_example.py
ximea_camera/: Cargo.toml  readme.md
ximea_camera/examples/: get_lens_focus_distance.rs  set_lens_mode.rs
ximea_camera/src/: frames.rs  helpers.rs  image_processor.rs  main.rs  structs.rs
(+19 files in other folders)
