[project]
name = "braid-opto-arena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.44",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pre-commit>=4.0.1",
    "pygame>=2.6.1",
    "pyserial>=3.5",
    "pyzmq>=26.2.0",
    "requests>=2.32.3",
    "ruff>=0.9.0",
    "scipy>=1.15.0",
    "tqdm>=4.67.1",
]
