[package]
name = "braid_retransmit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.197"
serde_json = "1.0.115"
futures-util = "0.3"
reqwest-eventsource = "=0.6.0"
eventsource-stream = "0.2.3"
