[package]
name = "xiapi_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xiapi = { git = "https://github.com/Ximea-GmbH/xiapi" }
redis = { version = "0.25.2", features = ["tokio-comp"] }
clap = { version = "4.5.3", features = ["derive"] }
zmq = "0.10.0"
ctrlc = "3.4.4"
savefile = "0.16.5"
log = "0.4.21"
env_logger = "0.11.3"
tokio = { version = "1", features = ["full"] }